environments/prod/dispatcharr/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dispatcharr
  namespace: dispatcharr
spec:
  parentRefs:
    - name: simons-gateway
      namespace: envoy
  hostnames:
    - "dispatcharr.simonbrundin.com"
  rules:
    - backendRefs:
        - kind: Service
          name: dispatcharr
          port: 9191
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
